@@ -170,15 +170,19 @@ class AuthTktCookiePlugin(object):
         else:
             max_age = ''
 
+        secure = ''
+        if self.secure:
+            secure = '; secure'
+
         cur_domain = environ.get('HTTP_HOST', environ.get('SERVER_NAME'))
         wild_domain = '.' + cur_domain
         cookies = [
-            ('Set-Cookie', '%s="%s"; Path=/%s' % (
-            self.cookie_name, value, max_age)),
-            ('Set-Cookie', '%s="%s"; Path=/; Domain=%s%s' % (
-            self.cookie_name, value, cur_domain, max_age)),
-            ('Set-Cookie', '%s="%s"; Path=/; Domain=%s%s' % (
-            self.cookie_name, value, wild_domain, max_age))
+            ('Set-Cookie', '%s="%s"; Path=/%s%s' % (
+            self.cookie_name, value, max_age, secure)),
+            ('Set-Cookie', '%s="%s"; Path=/; Domain=%s%s%s' % (
+            self.cookie_name, value, cur_domain, max_age, secure)),
+            ('Set-Cookie', '%s="%s"; Path=/; Domain=%s%s%s' % (
+            self.cookie_name, value, wild_domain, max_age, secure))
             ]
         return cookies
 
